# Plagiarism-Detector-Multi-Agent

./: README.md  app.py  dashboard.py  data.txt  data1.txt  pyproject.toml
api/: routes.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
models/: __init__.py  analysis_result.py  paper_struct.py
src/: __init__.py  agents.py  config.py  graph.py  multimodal.py  processors.py  search_tools.py  similarity.py  utils.py
